# BankingSystemExample

./: CMakeLists.txt  ClientOperations.cpp  ClientOperations.h  CreditOperations.cpp  CreditOperations.h  CurrencyConversion.cpp  CurrencyConversion.h  MainStructs.h  README.md  SearchFunctions.cpp  SearchFunctions.h  Validator.cpp  Validator.h  main.cpp  withdrawDeposit.cpp  withdrawDeposit.h
